Ashwin/Dileep | #3311 | Fixing save and continue button visibility in ie.

--- a/datawinners/media/css/scss/section_application.css
+++ b/datawinners/media/css/scss/section_application.css
@@ -297,9 +297,9 @@ input {
 
 .button_wizard_next {
   width: 214px;
-  height: 29px;
+  height: 30px;
   border: none !important;
-  background: url("/media/images/button_wizard_next.png") no-repeat top left/100% 100% rgba(0, 0, 0, 0);
+  background: url("/media/images/button_wizard_next.png") no-repeat top left rgba(0, 0, 0, 0);
   color: #6F451D !important;
   font-family: "Arial";
   font-size: 11px !important;
